styles/indexFlex.css
/* Page themes */
:root {  
    /* Theme Colors */
--primaryTheme: rgb(57, 151, 129);
--primaryThemeDark: rgb(51, 114, 99);
--secondaryTheme: rgb(218, 79, 47);

--primaryRed: rgb(204, 73, 73);
--darkRed: rgb(133, 40, 40);

--primaryWhite: white;

--headerPrimary: black;
--headerSecondary: rgb(130, 128, 128);
}

html, body {
    height: 100%;
    margin: 0;
    display: flex;
    flex-direction: column;
    font-family: "Poppins", serif;
}
img {
    width: 100%;
    height: 90%;
    object-fit: cover;
    display: inline-block;
    opacity: .6;
}
hr {
    border: none;
    border-top: 2px solid #000000; /* Custom styling for the line */
}
a {
    text-decoration: none;
    color: inherit; 
}
.section {
    flex: 1;
    height: auto;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;

}
/* Header */
#header {
    background-color:var(--primaryWhite);
    position: fixed;
    width: 100%;
    height: 40px;
    display: flex;
    flex-direction: row;
    z-index: 1;
}
#header_Left {
    flex: 1;
    width: 100%;
    display: flex;
    justify-content: start;
    align-items: center;
    flex-direction: row;
    padding-left: 3vh;
    padding-top: 5px;
    gap: 10px;
}

#header_Left img {
    object-fit: contain;
    width: 35px;
    height: 40px;
    opacity: 1;
}
#header_Left img:hover, #header_Left img:focus {
    opacity: .7;
    cursor: pointer;
}
#header_Right {
    flex: 1;
    display: flex;
    justify-content: end;
    padding-right: 3vh;
}
#header button {
    all: unset;
    margin-right: 2vh;
    margin-top: 2px;
    margin-bottom: 2px;
    padding: 5px;
    transition: color .15s;
    cursor: pointer;
}
#header button:active {
    opacity: .5;
}
#header #h_Contact {
    font-weight: bold;
    color: var(--primaryTheme);
    border: solid;
    border-radius: 2px;
    border-color: var(--primaryThem);
}
#header #h_Contact:hover, #header #h_Contact:focus {
    color: var(--primaryThemeDark);
    border-color: var(--primaryThemeDark);
}
#header #h_Home:hover, #header #h_Home:focus{
    color: var(--primaryThemeDark);
}


/* Landing Page */
#landingSection {
    background-color: var(--primaryTheme);
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    margin-top: 5px;
}
#landingSection #landing_Left {
    flex: 3;
    display: flex;
    height: 100vh;
    align-items: end;
    justify-content: center;
    color: white;
    position: relative;
    
}

.nameOverlay {
    position: absolute; 
    top: 50%;
    left: 48%;
    transform: translate(-50%, -50%); 
    color: white;
    font-size: 2.5rem; 
    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); 

}
#landingSection #landing_Right {
    flex: 2;
    display: flex;
    flex-direction: column;
    height: 100vh;
    background-color: var(--primaryWhite);
    align-items: start;
    justify-content: center;
    color: white;
}
#landingSection #landing_Right h2 {
    line-height: 0;
}
#landingSection #landing_Right .list-item {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    align-items: start;
    justify-content: start;
    width: 98%;
    height: auto;
}

.list_item_left {
    flex: 1;
    width: 100%;
    height: 100%;
    padding-left: 2px;
    padding-right: 2px;
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    justify-content: start;
    align-items: center;
    color: var(--primaryTheme);
}
.list_item_right {
    display: flex;
    flex-wrap: wrap;
    flex: 3;
    justify-content: start;
    align-items: center;
    width: 100%;
    height: 100%;
    padding: 0;
}
#landingSection #landing_Right ul {
    padding-right: 10px;
    list-style: none;
}
#landingSection #landing_Right li {
    line-height: auto;
    margin-bottom: 5px;
    color: black;
    font-size: 1.25rem;
}
.icon {
    font-size: 40px;
    padding: 6px;
    border: solid;
    border-radius: 50%;
    background-color: white;
}
.degree {
    color: black;
    font-weight: bold;
}
.degreeTitle {
    font-style: italic;
}


/* Experience Page */
#expHeader {
    display: flex;
    justify-content: center;
}
#expSection {
    background-color: var(--primaryTheme);
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 100%;
    border-bottom: solid;
    border-width: 7px;
    border-color: var(--primaryThemeDark);
    padding-top: 10px;
}
.expImgContainer img {
    width: 100%;
    height: auto; 
    object-fit: contain;
    opacity: 1;
}
.expImgContainer {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100px; 
    height: 100px;
    margin-bottom: 8px;
}
#expSection h1 {
    line-height: 0;
}
#expSection h3,h1 {
    margin-bottom: 0;
    margin-top: 0;
}
#expSection h3 {
    text-decoration: underline;
}
.expGrid {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); /* Creates responsive columns*/
    justify-content: center;
    gap: 16px;
    width: 90%; 
    height: 85vh;
    margin-bottom: 32px;
}
.expGrid.FR {
    background-color: var(--primaryThemeDark);
    width: 100%;
    color: white;
    height: auto;

}
.expGrid.Tools .expItem {
    background-color: transparent;
}
.expItem {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 15px;
    border-radius: 8px;
    text-align: center;
    background-color: var(--primaryThemeDark);
    transition: color .15s;
    
}
.expItem:hover, .expItem:focus {
    color: white;
    animation: shake 0.5s ease;
}
.expItem p {
    font-size: 1rem;
}

/* Certification Page */
#certSection {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); 
    gap: 16px;
    padding: 16px;
}
#certs {
    display: flex; 
    flex-direction: column; 
    justify-content: center; 
    align-items: center; 
    background-color: rgba(108, 108, 108, 0.1); 
    min-height: 250px; 
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); 
}
#certSection h3 {
    font-weight: bold;
    font-size: 2.2rem;
    text-decoration: underline;
    margin-bottom: 16px; 
    padding-left: 50px;

}
#certCard {
    display: flex;
    flex-direction: column; 
    gap: 4px; 
    background-color: white;
    padding: 12px;
    border-radius: 8px;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
    margin-bottom: 16px; 
    transition: transform 0.3s ease;
}
#certCard:hover,#certCard:focus {
    transform: translateX(-10px);
}
#certCard p {
    margin: 0; 
    font-size: 1rem;
    line-height: 1.2; 
}
#certTitle {
    font-weight: bold;
    font-size: 1.4rem;
}

/* Contact Page */
#contactSection {
    background-color: var(--primaryTheme);
    border-top: solid;
    border-width: 7px;
    border-color: var(--primaryThemeDark);
    padding-bottom: 10px;
    height: 85vh;
    display: flex;
    flex-direction: column;
    
}
#contactSection p {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    margin-bottom: 0;
    color: white;
    font-size: 1.2rem;
  
}
#emailForm {
    display: flex;
    flex-direction: column;
}
#emailForm input, textarea {
    margin-bottom: 5px;
}
#emailForm input:active, textarea:active {
    background-color: #d3d3d3;
    color: #a9a9a9; 
    pointer-events: none;
    cursor: not-allowed;
}
#submitBtn {
cursor: not-allowed;
 width: min-content;
 font-weight: bold;
 color: var(--primaryWhite);
 background-color: transparent;
 border: solid;
 border-radius: 2px;
 border-color: var(--primaryWhite);

}
#submitBtn:hover, #submitBtn:focus {
    color: rgb(184, 184, 184);
    border-color:rgb(184, 184, 184);
}
#submitBtn:active {
    opacity: .6;
}
#contact_Header {
    color: var(--primaryWhite);
    font-size: 3.8rem;
    line-height: 0;
}


/* Footer */
#footer {
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: var(--primaryThemeDark);
    color: white;
}

/* Landing Page Media Query for Smaller Screens */
@media screen and (max-width: 768px) {
    /* Make landing section (Right side) and Left side stack vertically */
    #landingSection {
        flex-direction: column;
    }
    .list_item_left {
        justify-content: center;
    }
    #landingSection #landing_Right .list-item {
        flex-direction: row;
    }
    #landingSection #landing_Right li {
        font-size: 14px;
    }
    .list_item_left {
        font-size: .8rem;
    }
   .nameOverlay {
    font-size: 1rem;
   }
    .expGrid  {
        grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
        gap: 8px;
        height: auto;
    }
    .FR {
        grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
        gap: 8px;
        height: auto;
    }
    .expGrid.Tools .expItem {
        background-color: white;
    }
    .expGrid.Tools .expItem:hover, .expItem:focus {
        color: black;
    }
}

/* Shake animation applied to cards */
@keyframes shake {
    0% {
        transform: translateX(0);
    }
    25% {
        transform: translateX(-5px);
    }
    50% {
        transform: translateX(5px);
    }
    75% {
        transform: translateX(-5px);
    }
    100% {
        transform: translateX(0);
    }
}

